[package]
name = "apimokka"
version = "0.9.0"
edition = "2021"

description = "API mock (apimock-rs) based visual mocking helper to handle HTTP/JSON req/res. Mock with mokka ☕️🌄"
authors = ["nabbisen <nabbisen@scqr.net>"]
license = "Apache-2.0"

categories = ["web-programming", "development-tools", "command-line-utilities"]
keywords = ["https", "api", "mock", "testing"]
repository = "https://github.com/nabbisen/apimokka"
readme = "README.md"
rust-version = "1.78.0"

[profile.release]     # shrink executable size
opt-level = "z"
lto = true
panic = "abort"
strip = true
codegen-units = 1

[profile.dev]         # reasonably improve productivity
opt-level = 1         # slightly optimize
lto = false           # disable link-time optimizations
# strip = "debuginfo" # reduce size
incremental = true

[dependencies]
apimock = { version = "3", features = ["spawn"] }
chrono = { version = "0", default-features = false, features = ["clock"] }
fltk = { version = "1", features = ["fltk-bundled"] }
tokio = "^1.44"

[package.metadata.docs.rs]
dependencies.fltk = { version = "1", default-features = false }
